src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-ofT-dwP0.25-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: P0.25\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 320 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 320 × 0, bounds: 1280 × 720, states: []
size: 320 × 1, bounds: 1280 × 720, states: [Activated]
